--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev": "nest start --watch && rm -rf dist/",
     "start:dev": "nest start --watch && rm -rf dist/",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
